Test Sandbox Project/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Cashback__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cashback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Free_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Free Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pre_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pre Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductImageRelatedList__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 50, 85)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 300, 512)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>if((Image__c != &apos;&apos; || Image__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Image__c,LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/resource/no_product_image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>purl</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Price__c</columns>
        <columns>Category__c</columns>
        <columns>ProductImageRelatedList__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>